# ai-agent

./: README.md
agent/: .gitignore  agent.py  bot.py  local_env.yml  pyproject.toml
agent/tools/: weather.py
ai-agent/: .gitignore  README.md  agent.py  pyproject.toml  secrets.env
starter/: agent.py  bot.py
