[project]
name = "quiz-ai"
version = "0.1.0"
description = "A Discord bot that helps with flashcard-based studying using a Mistral agent."
authors = ["Victor Chen <victor36@stanford.edu>", "Justin Yang <jstnyang@stanford.edu>", "Ethan Yuen <ehyuen@stanford.edu>", "Mark Marquez <mark.marquez@stanfor.edu>" ]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "audioop-lts>=0.2.1",
    "discord>=2.3.2",
    "mistralai>=1.4.0",
    "python-dotenv>=1.0.1",
]